--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "laravel-learning-platform-client-side",
+  "name": "assignment-10-learning-platform-client-side",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +11,11 @@
     "firebase": "^9.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-to-pdf": "^0.0.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
